# rupeetravel-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  architecture.excalidraw  samconfig.toml  template.yaml
.github/workflows/: deploy.yml
migrations/2025-05-20-000000_create_flights/: up.sql
src/: main.rs  models.rs  routes.rs  s3_client.rs  schema.rs
terraform/: api.tf  backend.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  variables.tf
