[package]
name = "flight_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "uuid"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }