[package]
name = "flight_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lambda Runtime
lambda_http = "0.8"
lambda_runtime = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7" # Needed to parse query strings manually

# Database
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "uuid"] }
diesel_migrations = "2.1.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

# AWS
aws-config = "1.1"
aws-sdk-s3 = "1.14"

# Utilities
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }